--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tailwindcss/typography": "^0.2.0",
     "@tailwindcss/ui": "^0.7.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "nuxt": "^2.14.5",
+    "tailwindcss-markdown": "^1.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
