--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 branches:
   only:
-    - master
+    - main
 
 install:
   - npm install
@@ -21,7 +21,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_ACCESS_TOKEN # Set in travis-ci.org dashboard, marked secure https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
-  target-branch: master
+  target-branch: main
   local-dir: dist
   on:
     branch: main
