--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 branches:
   only:
-    - master
+    - main
 
 install:
   - npm install
@@ -24,4 +24,4 @@ deploy:
   target-branch: gh-pages
   local-dir: dist
   on:
-    branch: master
+    branch: main
