--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - 8
+  - stable
 
 cache:
   directories:
@@ -8,7 +8,7 @@ cache:
 
 branches:
   only:
-    - main
+    - master
 
 install:
   - npm install
@@ -24,4 +24,4 @@ deploy:
   target-branch: gh-pages
   local-dir: dist
   on:
-    branch: main
+    branch: master
