--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5",
     "prism-themes": "^1.5.0",
-    "tailwindcss-markdown": "^1.0.1"
+    "tailwindcss-markdown": "^1.0.1",
+    "vue-gtag": "^1.10.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
