--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/ui": "^0.7.2",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5",
+    "nuxt-robots-module": "^1.5.1",
     "prism-themes": "^1.5.0",
     "tailwindcss-markdown": "^1.0.1",
     "vue-gtag": "^1.10.0"
