--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxt/content": "^1.11.0",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
