--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,6 @@ deploy:
   github-token: $GITHUB_ACCESS_TOKEN # Set in travis-ci.org dashboard, marked secure https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
   target-branch: gh-pages
   local-dir: dist
+  keep-history: true
   on:
     branch: main
