--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ branches:
   only:
     - main
 
+before_install:
+  - export TZ=Asia/Seoul
+  - date
 install:
   - npm install
   - npm run generate
